--- a/packages/editor/src/theme/stage.scss
+++ b/packages/editor/src/theme/stage.scss
@@ -2,18 +2,16 @@
   position: relative;
   width: 100%;
   height: calc(100% - $--page-bar-height);
-  overflow: auto;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .m-editor-stage-container {
   transition: transform 0.3s;
-  transform-origin: center -50%;
   z-index: 0;
-  top: 50%;
-  margin: 0 auto;
-  position: relative;
-  width: 375px;
-  height: 80%;
+  position: absolute;
   border: 1px solid $--border-color;
 
   &::-webkit-scrollbar {
