--- a/packages/editor/src/theme/stage.scss
+++ b/packages/editor/src/theme/stage.scss
@@ -9,10 +9,12 @@
 }
 
 .m-editor-stage-container {
-  transition: transform 0.3s;
+  width: 100%;
+  height: 100%;
   z-index: 0;
-  position: absolute;
+  position: relative;
   border: 1px solid $--border-color;
+  transition: transform 0.3s;
 
   &::-webkit-scrollbar {
     width: 0 !important;
