--- a/runtime/react/src/page/App.css
+++ b/runtime/react/src/page/App.css
@@ -1,8 +1,11 @@
-#root {
-  width: fit-content;
-  position: relative;
-  margin: 0 auto;
+html,
+body,
+#app {
+  width: 100%;
+  height: 100%;
 }
-::-webkit-scrollbar {
-  width: 0;
+
+#app {
+  position: relative;
+  overflow: auto;
 }
