feat: 新增select下的popper class

--- a/packages/editor/src/theme/props-panel.scss
+++ b/packages/editor/src/theme/props-panel.scss
@@ -14,4 +14,18 @@
   .el-tabs__item {
     font-size: 12px;
   }
+
+  span,
+  a,
+  p {
+    font-size: 12px;
+  }
+}
+
+.m-editor-props-panel-popper {
+  span,
+  a,
+  p {
+    font-size: 12px;
+  }
 }
