--- a/packages/editor/src/theme/page-bar.scss
+++ b/packages/editor/src/theme/page-bar.scss
@@ -6,19 +6,25 @@
   width: 100%;
   height: $--page-bar-height;
   line-height: $--page-bar-height;
-  background-color: #f3f3f3;
   color: $--font-color;
+  background-color: #f3f3f3;
   border-top: 1px solid $--border-color;
   z-index: 2;
   overflow: hidden;
 
-  .m-editor-page-bar-item {
+  &-items {
+    display: flex;
+    transition: transform 0.3s;
+  }
+
+  &-item {
     padding: 0 10px;
     cursor: pointer;
     border-right: 1px solid $--border-color;
     display: flex;
     justify-items: center;
     align-items: center;
+    background-color: #f3f3f3;
 
     &.active {
       background-color: #fff;
@@ -27,6 +33,11 @@
       .m-editor-page-bar-menu-icon {
         cursor: pointer;
       }
+    }
+
+    &-icon {
+      position: relative;
+      z-index: 1;
     }
 
     .m-editor-page-bar-title {
