style(stage): 组件列表节点文案过长时会与右侧图标重叠

--- a/packages/editor/src/theme/layer-panel.scss
+++ b/packages/editor/src/theme/layer-panel.scss
@@ -52,6 +52,7 @@
 
 .magic-editor-layer-panel .cus-tree-node {
   width: 100%;
+  overflow: hidden;
 }
 
 .magic-editor-layer-panel .cus-tree-node-hover {
