fix: 升级element-plus2.2.0后,button默认样式变化

--- a/packages/editor/src/theme/props-panel.scss
+++ b/packages/editor/src/theme/props-panel.scss
@@ -14,6 +14,10 @@
   .el-tabs__item {
     font-size: 12px;
   }
+
+  .el-input__wrapper {
+    border-radius: 0;
+  }
 }
 
 .m-editor-props-panel-popper {
