--- a/packages/editor/src/theme/props-panel.scss
+++ b/packages/editor/src/theme/props-panel.scss
@@ -1,18 +1,20 @@
 .m-editor-props-panel {
   padding: 0 10px;
 
-  .el-form-item__label {
-    font-size: 12px;
-  }
-
-  .m-fieldset {
-    legend {
+  &.small {
+    .el-form-item__label {
       font-size: 12px;
     }
-  }
 
-  .el-tabs__item {
-    font-size: 12px;
+    .m-fieldset {
+      legend {
+        font-size: 12px;
+      }
+    }
+
+    .el-tabs__item {
+      font-size: 12px;
+    }
   }
 
   .el-input__wrapper {
