fix(form): popper弹层字体大小仅在form size为small的时候设置为12px

--- a/packages/editor/src/theme/props-panel.scss
+++ b/packages/editor/src/theme/props-panel.scss
@@ -23,9 +23,11 @@
 }
 
 .m-editor-props-panel-popper {
-  span,
-  a,
-  p {
-    font-size: 12px;
+  &.small {
+    span,
+    a,
+    p {
+      font-size: 12px;
+    }
   }
 }
