--- a/runtime/react/src/page/App.css
+++ b/runtime/react/src/page/App.css
@@ -1,11 +1,16 @@
 html,
 body,
-#app {
+#root {
   width: 100%;
   height: 100%;
 }
 
-#app {
+#root {
   position: relative;
   overflow: auto;
+}
+
+#root::-webkit-scrollbar {
+  width: 0 !important;
+  display: none;
 }
