fix(editor): 页面标题不要换行

--- a/packages/editor/src/theme/page-bar.scss
+++ b/packages/editor/src/theme/page-bar.scss
@@ -25,6 +25,7 @@
     justify-items: center;
     align-items: center;
     background-color: #f3f3f3;
+    white-space: nowrap;
 
     &.active {
       background-color: #fff;
