fix(editor): 修正css sass变量
遇到浏览器报错

--- a/packages/editor/src/theme/framework.scss
+++ b/packages/editor/src/theme/framework.scss
@@ -35,7 +35,7 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      height: calc(100% - $--page-bar-height);
+      height: calc(100% - #{$--page-bar-height});
     }
 
     &-content {
