--- a/packages/editor/src/theme/stage.scss
+++ b/packages/editor/src/theme/stage.scss
@@ -1,7 +1,7 @@
 .m-editor-stage {
   position: relative;
   width: 100%;
-  height: calc(100% - $--page-bar-height);
+  height: calc(100% - #{$--page-bar-height});
   overflow: hidden;
   display: flex;
   justify-content: center;
