--- a/packages/editor/src/theme/code-block.scss
+++ b/packages/editor/src/theme/code-block.scss
@@ -7,7 +7,30 @@
   }
 
   .divider {
-    margin: 20px 0;
+    margin: 10px 0 0 0;
+  }
+
+  .list-container {
+    width: 100%;
+    overflow: hidden;
+    .list-item {
+      display: flex;
+      align-items: center;
+      .edit-icon {
+        position: absolute;
+        right: 15px;
+        padding-left: 5px;
+        background-color: #fff;
+      }
+      .code-name {
+        font-size: 14px;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        padding: 10px 15px;
+        margin-right: 15px;
+      }
+    }
   }
 }
 .m-editor-code-block-editor-panel {
