--- a/packages/editor/src/theme/code-block.scss
+++ b/packages/editor/src/theme/code-block.scss
@@ -16,11 +16,16 @@
     .list-item {
       display: flex;
       align-items: center;
-      .edit-icon {
+      .right-tool {
         position: absolute;
         right: 15px;
         padding-left: 5px;
         background-color: #fff;
+        display: flex;
+        align-items: center;
+        .edit-icon {
+          padding: 0 5px;
+        }
       }
       .code-name {
         font-size: 14px;
@@ -28,7 +33,7 @@
         white-space: nowrap;
         text-overflow: ellipsis;
         padding: 10px 15px;
-        margin-right: 15px;
+        margin-right: 60px;
       }
     }
   }
