style(editor): icon组件图标样式调整

--- a/packages/editor/src/theme/content-menu.scss
+++ b/packages/editor/src/theme/content-menu.scss
@@ -31,6 +31,10 @@
       color: $--font-color;
     }
 
+    .magic-editor-icon {
+      margin-right: 5px;
+    }
+
     &.divider {
       padding: 0 14px;
 
