--- a/packages/editor/src/theme/code-block.scss
+++ b/packages/editor/src/theme/code-block.scss
@@ -24,7 +24,7 @@
         display: flex;
         align-items: center;
         .edit-icon {
-          padding: 0 5px;
+          margin: 0 5px;
         }
       }
       .code-name {
