fix(editor): 解决修改代码名称后已选择的select tag不更新的问题,优化一些样式

--- a/packages/editor/src/theme/code-block.scss
+++ b/packages/editor/src/theme/code-block.scss
@@ -75,13 +75,20 @@
   width: 100%;
   align-items: center;
 }
-.code-editor-side-menu {
-  width: 20%;
-}
-.m-editor-code-block-editor-panel-list-mode {
-  width: 80%;
-  position: absolute;
-  height: 90%;
-  left: 20%;
-  top: 60px;
+.code-editor-dialog {
+  .el-dialog__body {
+    height: 90%;
+  }
+  .code-editor-side-menu {
+    width: 20%;
+    height: 90%;
+    overflow: auto;
+  }
+  .m-editor-code-block-editor-panel-list-mode {
+    width: 80%;
+    position: absolute;
+    height: 90%;
+    left: 20%;
+    top: 60px;
+  }
 }
