feat(editor): 增加代码块搜索,代码编辑器同步设置是否可编辑属性,修复不可编辑状态下弹窗无法关闭的问题

--- a/packages/editor/src/theme/code-block.scss
+++ b/packages/editor/src/theme/code-block.scss
@@ -1,9 +1,20 @@
 .m-editor-code-block-list {
-  padding-top: 20px;
-  .create-code-button {
+  margin-top: 5px;
+  .code-header-wrapper {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    .code-filter-input {
+      margin: 0 5px;
+    }
+    .code-filter-input-no-btn {
+      margin-left: 5px;
+      margin-right: 10px;
+    }
+    .create-code-button {
+      margin-left: 2px;
+      margin-right: 10px;
+    }
   }
 
   .divider {
