--- a/packages/editor/src/theme/code-block.scss
+++ b/packages/editor/src/theme/code-block.scss
@@ -69,6 +69,7 @@
 .code-editor-dialog {
   .el-dialog__body {
     height: 90%;
+    padding-top: 10px;
   }
   .el-card {
     height: 100%;
@@ -79,19 +80,18 @@
     }
   }
 
-  .code-editor-side-menu {
-    width: 20%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: #fff;
+  .code-editor-layout {
+    height: 100%;
+    border: 1px solid #e4e7ed;
 
     .side-tree {
-      margin-top: 10px;
+      height: 100%;
+      overflow: auto;
+
       .list-container {
         width: 100%;
         overflow: hidden;
-        margin-left: -20px;
+        margin-left: -10px;
         .list-item {
           width: 100%;
           margin: 10px 0;
@@ -121,13 +121,12 @@
   }
 
   .m-editor-code-block-editor-panel-list-mode {
-    position: absolute;
-    top: 0;
-    left: 20%;
-    width: 80%;
     height: 100%;
     z-index: 10;
     background: #fff;
+    .el-card {
+      border: 0;
+    }
   }
 
   .m-editor-code-block-editor-panel {
@@ -146,15 +145,10 @@
       height: 100%;
     }
     .m-editor-content-bottom {
-      text-align: right;
       height: 40px;
-      padding-right: 20px;
-      position: absolute;
-      width: calc(100% - 30px);
+      width: 100%;
       display: flex;
       justify-content: end;
-      bottom: 20px;
-      right: 0;
       background: #fff;
       > button {
         height: 30px;
