--- a/packages/editor/src/theme/code-block.scss
+++ b/packages/editor/src/theme/code-block.scss
@@ -1,5 +1,8 @@
 .m-editor-code-block-list {
   margin-top: 5px;
+  .el-tree-node__content {
+    height: auto;
+  }
   .code-header-wrapper {
     display: flex;
     align-items: center;
@@ -45,6 +48,25 @@
         text-overflow: ellipsis;
         padding: 10px 15px;
         margin-right: 60px;
+      }
+    }
+    .code-comp-map-wrapper {
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      margin-left: 20px;
+      margin-bottom: 5px;
+      .arrow-left {
+        transform: rotate(-45deg);
+        width: 20px;
+        height: 20px;
+      }
+      .code-comp {
+        margin-left: 5px;
+        padding: 5px;
+        .comp-delete-icon {
+          margin-left: 3px;
+        }
       }
     }
   }
