--- a/packages/editor/src/theme/code-block.scss
+++ b/packages/editor/src/theme/code-block.scss
@@ -87,7 +87,7 @@
     height: 100%;
     background: #fff;
     .el-card__body {
-      height: calc(100% - 80px);
+      height: 100%;
       background: #fff;
     }
   }
@@ -127,6 +127,7 @@
     display: flex;
     align-items: center;
     font-size: 16px;
+    margin-bottom: 10px;
     .code-name-label {
       margin-right: 10px;
     }
@@ -148,7 +149,7 @@
     position: absolute;
     top: 0;
     left: 4px;
-    width: calc(100% - 9px);
+    width: 100%;
     height: 100%;
     z-index: 10;
     background: #fff;
@@ -160,14 +161,17 @@
   .m-editor-wrapper {
     height: 100%;
     .m-editor-container {
-      height: calc(100% - 70px);
+      height: calc(100% - 65px);
     }
     .m-editor-content-bottom {
-      height: 40px;
+      height: 45px;
       width: 100%;
       display: flex;
       justify-content: end;
       background: #fff;
+      position: absolute;
+      right: 20px;
+      bottom: 0;
       > button {
         height: 30px;
         margin-top: 15px;
