feat(editor,form,schema): 优化代码
Squash merge branch 'feature/parisma_881986193' into 'master'
1、扩展参数配置能力，支持参数类型定义，支持参数注释
2、修复代码块嵌套多层时绑定关系展示不正确的问题
3、支持在组件绑定位置编辑查看代码块

--- a/packages/editor/src/theme/code-block.scss
+++ b/packages/editor/src/theme/code-block.scss
@@ -78,6 +78,10 @@
 
 .m-fields-code-select {
   width: 100%;
+  .edit-icon {
+    cursor: pointer;
+    margin-right: 5px;
+  }
 }
 
 .el-dialog.is-fullscreen.code-editor-dialog {
