--- a/packages/editor/src/theme/code-block.scss
+++ b/packages/editor/src/theme/code-block.scss
@@ -1,17 +1,19 @@
 .m-editor-code-block-list {
   height: 100%;
-  margin-top: 5px;
+  margin-top: 48px;
   .code-header-wrapper {
     display: flex;
     align-items: center;
     justify-content: center;
-    .code-filter-input {
-      margin: 0 5px;
+    position: absolute;
+    top: 0;
+    width: 100%;
+
+    .search-input {
+      flex: 1;
+      position: relative;
     }
-    .code-filter-input-no-btn {
-      margin-left: 5px;
-      margin-right: 10px;
-    }
+
     .create-code-button {
       margin-left: 2px;
       margin-right: 10px;
