--- a/packages/editor/src/theme/code-block.scss
+++ b/packages/editor/src/theme/code-block.scss
@@ -34,6 +34,7 @@
     overflow: hidden;
     .list-item {
       display: flex;
+      align-items: center;
       width: 100%;
 
       .right-tool {
