feat(editor): 代码编辑交互优化
1、代码列表中代码块和组件区分不够清晰，查看按钮太靠边，开发模式下未对齐
2、代码编辑/查看弹窗希望可以点击蒙层或者esc键退出
3、代码块绑定到组件的地方和事件绑定UI统一
4、在代码绑定的地方需要支持查看或者编辑
Bug：
1、旧格式的事件联动删除到只剩最后一个时无法成功删除

--- a/packages/editor/src/theme/code-block.scss
+++ b/packages/editor/src/theme/code-block.scss
@@ -36,21 +36,45 @@
       display: flex;
       align-items: center;
       width: 100%;
+      align-items: center;
 
       .right-tool {
         display: flex;
         width: fit-content !important;
+        align-items: center;
+        margin-right: 10px;
         .edit-icon {
           margin: 0 5px;
         }
       }
+
+      .codeIcon {
+        width: 20px;
+        height: 20px;
+        margin-right: 5px;
+      }
+
+      .compIcon {
+        width: 15px;
+        height: 15px;
+        margin-right: 5px;
+      }
+
       .code-name {
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
         width: 0 !important;
         flex: 1;
-        line-height: 18px;
+        line-height: 22px;
+
+        &.code {
+          color: #000;
+        }
+
+        &.hook {
+          color: #909399;
+        }
       }
     }
   }
@@ -58,9 +82,8 @@
 
 .m-fields-code-select {
   width: 100%;
-  .edit-icon {
-    cursor: pointer;
-    margin-right: 5px;
+  .el-card__header {
+    display: none;
   }
 }
 
