--- a/packages/editor/src/theme/event.scss
+++ b/packages/editor/src/theme/event.scss
@@ -21,4 +21,16 @@
 }
 .m-fields-code-select-col {
   width: 100%;
+  .code-select-container {
+    display: flex;
+    align-items: center;
+    .select {
+      flex: 10 0 100px;
+    }
+    .icon {
+      flex: 1 0 20px;
+      cursor: pointer;
+      margin-right: 5px;
+    }
+  }
 }
