feat(core,editor,data-source,form,schema): 新增数据源方法配置,支持事件联动数据源方法

--- a/packages/editor/src/theme/code-editor.scss
+++ b/packages/editor/src/theme/code-editor.scss
@@ -1,7 +1,32 @@
 .magic-code-editor {
   width: 100%;
+}
 
-  .margin {
-    margin: 0;
+.magic-code-editor-wrapper {
+  width: 100%;
+  height: 100%;
+  position: relative;
+
+  &.full-screen {
+    position: fixed;
+    z-index: 10000;
+    top: 0;
+    left: 0;
+  }
+
+  .magic-code-editor-content {
+    width: 100%;
+    height: 100%;
+
+    .margin {
+      margin: 0;
+    }
+  }
+
+  .magic-code-editor-full-screen-icon {
+    position: absolute;
+    top: 5px;
+    right: 0;
+    z-index: 1;
   }
 }
