style(editor): 代码块编辑中代码编辑器高度自动设置保持表单不出现滚动条

--- a/packages/form/src/theme/form-drawer.scss
+++ b/packages/form/src/theme/form-drawer.scss
@@ -2,4 +2,10 @@
   .el-drawer__header {
     margin: 0;
   }
+
+  .m-drawer-body {
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
 }
