feat(editor,data-source): 支持数据源方法配置执行时机

--- a/packages/editor/src/theme/code-block.scss
+++ b/packages/editor/src/theme/code-block.scss
@@ -24,3 +24,13 @@
     display: none;
   }
 }
+
+.m-editor-code-block-editor {
+  .tmagic-design-table {
+    height: 180px;
+  }
+
+  .el-drawer__body {
+    padding: 10px 20px;
+  }
+}
