feat(editor): 新增数据源时先选类型

--- a/packages/editor/src/theme/data-source.scss
+++ b/packages/editor/src/theme/data-source.scss
@@ -15,3 +15,14 @@
     }
   }
 }
+
+.data-source-list-panel-add-menu {
+  .tmagic-design-button {
+    width: 100%;
+    text-align: left;
+
+    span {
+      width: 100%;
+    }
+  }
+}
