style(editor): 优化显示条件展示

--- a/packages/editor/src/theme/props-panel.scss
+++ b/packages/editor/src/theme/props-panel.scss
@@ -20,6 +20,14 @@
   .el-input__wrapper {
     border-radius: 0;
   }
+
+  .m-fields-group-list {
+    .tmagic-design-table {
+      th {
+        font-size: 12px;
+      }
+    }
+  }
 }
 
 .m-editor-props-panel-popper {
