refactor(editor): 优化性能，组件树重写，不再使用el-tree

--- a/packages/editor/src/theme/common/var.scss
+++ b/packages/editor/src/theme/common/var.scss
@@ -1,11 +1,11 @@
 $--theme-color: #2882e0;
 
-$--font-color: #070303;
+$--font-color: #313a40;
 $--border-color: #d9dbdd;
 $--hover-color: #f3f5f9;
 
 $--nav-height: 35px;
-$--nav-color: #070303;
+$--nav-color: #313a40;
 $--nav--background-color: #ffffff;
 
 $--sidebar-heder-background-color: $--theme-color;
