--- a/packages/editor/src/theme/sidebar.scss
+++ b/packages/editor/src/theme/sidebar.scss
@@ -49,12 +49,8 @@
     overflow: auto;
   }
 
-  .el-scrollbar {
+  .tmagic-design-scrollbar {
     height: 100%;
-  }
-
-  .el-tree {
-    min-height: 100%;
   }
 
   .fold-icon {
