feat(editor): 支持 slide 侧边栏可拖拽悬浮

--- a/packages/editor/src/theme/theme.scss
+++ b/packages/editor/src/theme/theme.scss
@@ -22,4 +22,5 @@
 @import "./data-source-methods.scss";
 @import "./data-source-input.scss";
 @import "./key-value.scss";
+@import "./floatbox.scss";
 @import "./tree.scss";
