feat(editor): http数据源请求体配置支持写json

--- a/packages/editor/src/theme/key-value.scss
+++ b/packages/editor/src/theme/key-value.scss
@@ -1,3 +1,10 @@
+.m-fields-key-value {
+  display: flex;
+  justify-items: center;
+  align-items: top;
+  width: 100%;
+}
+
 .m-fields-key-value-item {
   display: flex;
   margin-bottom: 10px;
